--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,18 @@
 
         <!-- Funz Dependencies -->
 		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-exec</artifactId>
+			<version>1.3</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-lang</groupId>
+			<artifactId>commons-lang</artifactId>
+			<version>2.6</version>
+		</dependency>
+
+		<!-- Funz -->
+		<dependency>
             <groupId>org.irsn.funz</groupId>
             <artifactId>funz-core</artifactId>
 	        <version>${funz.version}</version>
